# dna-core

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  pages.yml
crates/dna-core/: Cargo.toml
crates/dna-core/src/: base.rs  helix.rs  lib.rs  mutation.rs  protein.rs  rna.rs  strand.rs
web/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/public/wasm/: dna_core_bg.wasm
web/src/: App.tsx  main.tsx  vite-env.d.ts
web/src/components/: BaseInfoCard.tsx  ControlPanel.tsx  HelixScene.tsx  HelpModal.tsx  ProteinView.tsx  SequenceView.tsx  StatsBar.tsx
web/src/lib/: colors.ts  presets.ts  types.ts
web/src/styles/: index.css
web/src/wasm/: dnaCore.ts
