[package]
name = "dna-core"
version = "0.1.0"
edition = "2021"
authors = ["genome-canvas contributors"]
description = "Pure-Rust DNA/RNA/protein primitives compiled to WebAssembly"
license = "MIT"
repository = "https://github.com/vixhal-baraiya/genome-canvas"
keywords = ["dna", "rna", "protein", "bioinformatics", "wasm"]
categories = ["science", "wasm", "no-std"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
name = "dna_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
